--- a/index.html
+++ b/index.html
@@ -19,6 +19,25 @@
                 </ul>
                 <a href="#" class="register-btn">Register Now </a>
             </nav>
+            <div class="container">
+                <h1>Find Your Next Stay <br> Travel, <br> Discover, <br> Explore</h1>
+                <div class="search-bar">
+                    <form>
+                        <div>
+                            <label>Location </label>
+                            <input type="text" placeholder="Where are you going?">
+                        </div>
+                        <div>
+                            <label>Check In  </label>
+                            <input type="text" placeholder="Add dates">
+                        </div>
+                        <div>
+                            <label>Guest </label>
+                            <input type="text" placeholder="Add guests">
+                        </div>
+                        <button type="submit"><img src="images/search.png"></button>
+                    </form>
+            </div>
         </div>
     </body>
 </html>
