--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <h1>Find Your Next Stay <br> Travel, <br> Discover, <br> Explore</h1>
                 <div class="search-bar">
                     <form>
-                        <div>
+                        <div class="location-input">
                             <label>Location </label>
                             <input type="text" placeholder="Where are you going?">
                         </div>
