--- a/index.html
+++ b/index.html
@@ -39,5 +39,26 @@
                     </form>
             </div>
         </div>
+        </div>
+        <div class="container">
+            <h2 class="sub-title">Exclusive </h2>
+            <div class="exclusives">
+            <div>
+                <img src="images/image-1.png">
+            </div>
+            <div>
+                <img src="images/image-2.png">
+            </div>
+            <div>
+                <img src="images/image-3.png">
+            </div>
+            <div>
+                <img src="images/image-4.png">
+            </div>
+            <div>
+                <img src="images/image-5.png">
+            </div>
+        </div>
+        </div>
     </body>
 </html>
