--- a/index.html
+++ b/index.html
@@ -45,20 +45,96 @@
             <div class="exclusives">
             <div>
                 <img src="images/image-1.png">
+                <span>
+                    <h3>London </h3>
+                    <p>  Start from $250</p>
+                </span>
             </div>
             <div>
                 <img src="images/image-2.png">
+                <span>
+                    <h3>Switzerland </h3>
+                    <p>  Start from $250</p>
+                </span>
             </div>
             <div>
                 <img src="images/image-3.png">
+                <span>
+                    <h3>Australia </h3>
+                    <p>  Start from $250</p>
+                </span>
             </div>
             <div>
                 <img src="images/image-4.png">
+                <span>
+                    <h3>France  </h3>
+                    <p>  Start from $250</p>
+                </span>
             </div>
             <div>
                 <img src="images/image-5.png">
+                <span>
+                    <h3>Amsterdam</h3>
+                    <p>  Start from $250</p>
+                </span>
+            </div>
+            <div>
+                <img src="images/image-6.png">
+                <span>
+                    <h3>Netherlands</h3>
+                    <p>  Start from $250</p>
+                </span>
+            </div>
+            <div>
+                <img src="images/image-7.png">
+                <span>
+                    <h3>New York </h3>
+                    <p>  Start from $250</p>
+                </span>
+            </div>
+            <div>
+                <img src="images/image-8.png">
+                <span>
+                    <h3>Japan </h3>
+                    <p>  Start from $250</p>
+                </span>
+            </div>
+            <div>
+                <img src="images/image-9.png">
+                <span>
+                    <h3>Turkey</h3>
+                    <p>  Start from $250</p>
+                </span>
+            </div>
+            <div>
+                <img src="images/image-10.png">
+                <span>
+                    <h3>Shanghai</h3>
+                    <p>  Start from $250</p>
+                </span>
             </div>
         </div>
+
+        <h2 class="sub-title">Popular Places </h2>
+        <div class="trending">
+            <div>
+                <img src="images/dubai.png">
+                <h3>Dubai</h3>
+            </div>
+            <div>
+                <img src="images/new-york.png">
+                <h3>New York</h3>
+            </div>
+            <div>
+                <img src="images/paris.png">
+                <h3>Paris</h3>
+            </div>
+            <div>
+                <img src="images/new-delhi.png">
+                <h3>New Delhi</h3>
+            </div>
+        </div>
+
         </div>
     </body>
 </html>
