--- a/index.html
+++ b/index.html
@@ -135,6 +135,12 @@
             </div>
         </div>
 
+        <div class="cta">
+            <h3>Start your journey with us now! </h3>
+            <p>Register now to get our latest updates</p>
+            <a href="#" class="cta-btn">Register Now</a>
+        </div>
+
         </div>
     </body>
 </html>
