--- a/index.html
+++ b/index.html
@@ -136,10 +136,26 @@
         </div>
 
         <div class="cta">
-            <h3>Start your journey with us now! </h3>
+            <h3>Start your <br>journey with us now! </h3>
             <p>Register now to get our latest updates</p>
             <a href="#" class="cta-btn">Register Now</a>
         </div>
+
+        <h2 class="sub-title">Travelers Stories</h2>
+        <div class="stories">
+            <div>
+                <img src="images/story-1.png">
+                <p> Photos of My Trip to Amsterdam</p>
+            </div>
+            <div>
+                <img src="images/story-2.png">
+                <p>  Photos of My Trip to London</p>
+            </div>
+            <div>
+                <img src="images/story-3.png">
+                <p> Photos of My Trip to Paris</p>
+            </div>
+            
 
         </div>
     </body>
