--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <nav >
                 <img src="images/logo.png" class="logo">
                 <ul class="nav-links">
-                    <li><a href="#">Popular Places </a></li>
+                    <li><a href="#" class="active">Popular Places </a></li>
                     <li><a href="#">Travel Outside</a></li>
                     <li><a href="#">Online Packages</a></li>
                 </ul>
