update media screen

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </head>
     <body>
         <div class="header">
-            <nav >
+            <nav id="navBar">
                 <img src="images/logo.png" class="logo">
                 <ul class="nav-links">
                     <li><a href="#" class="active">Popular Places </a></li>
@@ -22,6 +22,7 @@
                     <li><a href="#">Online Packages</a></li>
                 </ul>
                 <a href="#" class="register-btn">Register Now </a>
+                <i class="fas fa-bars" onclick="togglebtn()"></i>
             </nav>
             <div class="container">
                 <h1>Find Your Next Stay <br> Travel, <br> Discover, <br> Explore</h1>
@@ -188,5 +189,7 @@
             
 
         </div>
+    </div>
+    <script src="script.js"></script>
     </body>
 </html>
